edited event model, add only admin access to some route in backend, edited all tests and swagger
